Skip to content
GitLab
  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • M mutter
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,013
    • Issues 1,013
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 138
    • Merge requests 138
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • mutter
  • Issues
  • #2042
Closed
Open
Created Nov 30, 2021 by Olivier Fourdan@ofourdan🛠Contributor

Dnd between X11 and Wayland native windows fail

Affected version

  • Fedora 35
  • 41.0
  • Wayland

Bug summary

This was reported downstream in https://bugzilla.redhat.com/2027569 with a reproducer attached there.

DnD between X11 and Wayladn native windows worked in mutter 40 but fails in mutter 41 (this is a regression)

Steps to reproduce

  1. compile attached file with "gcc XDnDSource.c -o XDnDSource -lX11 && ./XDnDSource". Attached file is a simple drag source client, written using XDND protocol. It has single mime-type to transfer: text-plain.
  2. try to perform drag and drop starting from black area.
  3. drop to gedit, firefox, etc.

What happened

DnD fails

What did you expect to happen

DnD works

Relevant logs, screenshots, screencasts etc.

I ran a bisection and 448ffaef is the first bad commit:

commit 448ffaefc5dfcd2f93ab7449ea27f633022876ce
Author: Alexander Mikhaylenko <exalm7659@gmail.com>
Date:   Sat Oct 12 23:53:19 2019 +0500

    stack: Check workspace in get_default_focus_window()
    
    Check against the window argument, instead of active workspace.
    
    Part-of: <https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/850>

 src/core/stack.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)

cc: @exalm

Assignee
Assign to
Time tracking